--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		<section id="two" class="wrapper">
 				<div class="inner alt">
 					<section class="spotlight">
-						<div class="image"><img src="images/pic04.jpg" alt="" /></div>
+						<div class="image"><img src="images/smartcars.png" alt="" /></div>
 
 						<div class="content">
 							<h3>SVHandler</h3>
@@ -73,7 +73,7 @@
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/pic05.jpg" alt="" /></div>
+						<div class="image"><img src="images/DIFU.png" alt="" /></div>
 						<div class="content">
 							<h3>Difu</h3>
                             <p>Mini Project</p>
