--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<li><a href="https://twitter.com/biradarumesh99" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 					
 				</ul>
-				<p class="copyright">&copy;  <a href="http://html5up.net">upbiradar.com </a></p>
+				<p class="copyright">&copy; Copyrights | All rights reserved.</p>
 			</footer>
 
 		<!-- Scripts -->
